Fix: Prioritize Env Var for Firebase, add debug logs

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ key.txt
 key_info.txt
 google-services.json
 firebase_options.dart
+serviceAccountKey.json
+base64_creds.txt
 
 # Dependencies
 vendor/
